# tudatpy-utils

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  FRAME_CONVERSION.md  HARD_CODED_LEAP_SECONDS.md  HARD_CODED_LEAP_SECOND_IN_SOFA.md  MISC.md  OEM_TO_TLE.md  PROPAGATION.md  README.md  TIME_CONVERSION.md  TLE.md  TODO.md  build_coverage.sh  convert_time.cpp  convert_time.h  convert_time.py  convert_time2.py  convert_time_cli.cpp  convert_time_cli2.cpp  convert_time_disp_fn.h  convert_time_disp_fn_cli.cpp  convert_time_disp_tbl.cpp  convert_time_disp_tbl.h  convert_time_disp_tbl_cli.cpp  convert_time_disp_tmpl.h  download_tle.py  gcrf_to_itrf.py  python_module_dependency_graph.mmd  python_script_data_flow_diagram.mmd  python_style_guide.md  test_leap_second.sh  test_time_conversion.cpp  tle_info.py
common/: common.py  consts.py  convert_tle.py  kepler.py  mean_kepler.py  oem.py  omm.py  slice_oem.py  time_utils.py  tle.py
doc/: CCSDS_OMM_2023_04.md  COMMON_LIBRARY_SUMMARY.md  FRAME_CONVERSION.md  HARD_CODED_LEAP_SECONDS.md  MISC.md  OEM_TO_OMM.md  OEM_TO_TLE.md  PROPAGATION.md  README.md  SLICE_OEM.md  TLE.md  TODO.md  python_module_dependency_graph.mmd  python_script_data_flow_diagram.mmd  python_style_guide.md  tudat_earth_rotation_model_data_files.md  tudatpy_frame_conversion.md
element_conversion/: cartesian_to_keplerian.py
frame_conversion/: common.py  gcrf_to_itrf_iau.py  gcrf_to_itrf_rot_model.py  gcrf_to_itrf_spice.py  tudat_earth_rotation_model_data_files.md  tudatpy_frame_conversion.md
interpolator/: __init__.py  interpolator.py  lagrange.py
misc/: chrono_clock_epochs.cpp  chrono_utc_time_leapsecond_behaviour.cpp  evaluate_build_tle_from_oem.py  state_diff.py  test_epoch_conversion.sh  test_leap_second.sh  test_leap_second2.sh  tudat.h
oem/: oem_slice.py  slice_oem.py
oem_to_kepler/: __init__.py  oem_to_kepler.py
oem_to_omm/: constants.py  estimation.py  evaluate_fit_tle.py  fit_common.py  fit_mean_kepler.py  fit_osculating_kepler.py  fit_tle.py  fit_tle_main.py  models.py  oem_to_omm.py  orbital_mechanics.py  refinement.py  tle_builder.py
oem_to_tle/: __init__.py  constants.py  estimation.py  evaluate_build_tle_from_oem.py  evaluate_oem_to_tle.py  io_utils.py  linalg.py  models.py  oem_to_tle.md  oem_to_tle.py  orbital_mechanics.py  parse_cli_args.py  refinement.py  tle_builder.py
plotting/: plot_dependent_variables.py  plot_orbits.py
propagation/: propagate_kepler.py  propagate_orbit.py  propagate_satellite_orbit.py  propagate_tle.py
test/: AMOS-17_2019-050A.omm  AMOS-17_2019-050A.tle  ISS-(ZARYA)_1998-067A.tle  ISS_2026-05-20.OEM  LEO-3_2023-100G.tle  convert_time_gtest.cpp  create_stubs.sh  download_iss_oem.sh  head_oem.sh  plot_iss_orbits.sh  propagate_iss.sh  test_cartesian_to_keplerian.py  (+16 more)
time_conversion/: CMakeLists.txt  base_dispatch_entries.cpp  base_dispatch_entries.h  chrono_time_to_x.h  conversion_wrapper.h  convert_time.cpp  convert_time.h  convert_time.md  convert_time_chrono.h  convert_time_common.h  convert_time_disp_fn.h  convert_time_disp_tbl.cpp  convert_time_disp_tmpl.h  convert_time_epochs.h  convert_time_iso8601.cpp  convert_time_iso8601.h  convert_time_j2000.cpp  convert_time_j2000.h  convert_time_leap_transition.cpp  convert_time_leap_transition.h  convert_time_tudat.cpp  convert_time_tudat.h  convert_time_utc_iso.cpp  convert_time_utc_iso.h  dispatch_handler.h  example_utc_iso8601_to_tai_zoneinfo.cpp  time_conversion_common.h  time_conversion_epochs.h  time_converter.cpp  time_converter.h  time_converter_base.h  utc_conversion.cpp  utc_conversion.h  utc_conversion.md  utc_conversion.mmd  utc_iso8601_to_tai_zoneinfo.h  utc_iso_to_x.cpp  utc_iso_to_x.h
time_conversion/base/: base_dispatch_entries.cpp  base_dispatch_table.cpp  convert_time.md  convert_time_disp_tbl.cpp  convert_time_j2000.cpp  iso8601.cpp  time_converter_base.cpp  time_converter_base.h  zoneinfo_leap_transition.cpp
time_conversion/chrono/: chrono_dispatch_entries.cpp  chrono_dispatch_table.cpp  time_converter_chrono.cpp  time_converter_chrono.h
time_conversion/chrono/test/: time_converter_chrono_gtest.cpp
time_conversion/chrono_utc/: chrono_dispatch_entries.cpp  chrono_dispatch_entries.h  time_converter_chrono_utc.cpp  time_converter_chrono_utc.h
time_conversion/old/: chrono_clock_1972.cpp  chrono_clock_epochs.cpp  chrono_utc_time_leapsecond_behaviour.cpp
time_conversion/test/: convert_time_common_gtest.cpp  convert_time_common_gtest.h  convert_time_disp_fn_gtest.cpp  convert_time_disp_tbl_gtest.cpp  convert_time_epochs_gtest.cpp  convert_time_gtest.cpp  convert_time_gtest_common.cpp  convert_time_gtest_common.h  convert_time_iso8601_gtest.cpp  convert_time_j2000_gtest.cpp  convert_time_tmpl_gtest.cpp  convert_time_tudat_disp_tbl_gtest.cpp  convert_time_tudat_gtest.cpp  test_epoch_conversion.sh  test_epoch_conversion2.sh  test_leap_second.sh  test_leap_second2.sh  time_converter_chrono_gtest.cpp  tudat_datetime_bug_incorrect_py_datetime.py
time_conversion/tools/: CMakeLists.txt  convert_time.py  convert_time2.py  convert_time_cli.cpp  convert_time_disp_fn.h  convert_time_disp_tbl.cpp  convert_time_disp_tbl.h  convert_time_tudat_cli.cpp
time_conversion/tudat/: CMakeLists.txt  time_converter_tudat.cpp  time_converter_tudat.h  time_converter_tudat_disp_tbl.cpp  tudat_dispatch_table.cpp
time_conversion/tudat/test/: convert_time_gtest_common.cpp  convert_time_tudat_disp_tbl_gtest.cpp
time_conversion_tudat/: CMakeLists.txt  convert_time_common.h  convert_time_tudat.cpp  convert_time_tudat.h  convert_time_utc_iso.cpp  convert_time_utc_iso.h  time_converter_tudat.h
time_conversion_tudat/test/: convert_time_common_gtest.cpp  convert_time_tudat_disp_fn_gtest.cpp  convert_time_tudat_disp_tbl_gtest.cpp  convert_time_tudat_gtest.cpp  test_epoch_conversion.sh  tudat_datetime_bug_60plus_seconds.py  tudat_tdb_conversion_bug.py
time_conversion_tudat/tools/: CMakeLists.txt  convert_time_disp_fn.h  convert_time_disp_tbl.cpp  convert_time_disp_tbl.h  convert_time_tudat_cli.cpp  convert_time_tudat_disp_tbl.cpp  convert_time_tudat_disp_tbl.h
(+63 files in other folders)
